--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Blessing Samuel Collins and I help brands grow.</p>
                                 <p class="text-muted">I am an innovative and enthusiastic individual with a combined experience in TECHNOLOGY, 
-                                    PROCUREMENT MONITORING & EVALUATION; I am eager to learn, contribute my 
+                                    PROCUREMENT, MONITORING & EVALUATION; I am eager to learn, contribute my 
                                     skills and experience in organizational growth when given an opportunity</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://x.com/blessam36?t=-tTMEif21AJ5gdWNnmPSrw&s=09"><i class="bi bi-twitter"></i></a>
